VERSION: 1.0.7

Potential improvements:
- Template updates make more use of Groovy.
- Script update recommended by Peter Ledbrook for GRAILS-6239.
- Move source to GitHub.
- Add messageSource to controller template for validate method.
- Validate method add more ?. null handlers.

Release notes for 1.0.7 (TBA)
- Footer output update.
- Remove redundant i18n files.

Release notes for 1.0.6 (31 May 2010).
- Grails 1.3.1 upgrade.
- TextTagLib remoteSelect fixes.
- TextTagLib remoteSortableColumn introduction.
- List view updated to make use of remoteSortableColumn.
- Controller.groovy contact form bug fix.
- No load skin fix (GRAILS-6239).

Release notes for 1.0.5
- Update to remote-forms skin to include new render pattern.
- Update to TextTagLibrary.
- List view remote pagination.
- Improved logging.

Release notes 1.0.4
- Small typo in the skin loader script.

Release notes 1.0.3
- Unit test fix.
- Small improvement to allow easier message source mocking from the generate controllers.

Release notes 1.0.2
- Improvements to the remote-forms skin resource loading to allow better support when being used in plug-ins.
- Removal of redundant image tag library.

Release notes 1.0.1
- Small URL typo in the SkinLoaderGrailsPlugin.groovy descriptor file.
- Migrated "remote-forms" taglibs into a package.

Release notes 1.0.0
- Final release

Release notes 0.0.4
- Updates to the remote-forms skin and improvements to the index.gsp

Release notes 0.0.3
- Further small tweaks.

Release notes 0.0.2:
- Fixed small typo within the load skin script.

Initial release: 0.0.1
