@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Mon May 31 18:29:10 BST 2010
-app.grails.version=1.3.1
+#Fri Sep 03 21:33:06 BST 2010
+app.grails.version=1.3.4
 app.name=skin-loader
 app.servlet.version=2.4
 app.version=1.0.7
-plugins.hibernate=1.3.1
-plugins.tomcat=1.3.1
+plugins.hibernate=1.3.4
+plugins.tomcat=1.3.4
