@@ -3,13 +3,15 @@ VERSION: 1.0.7
 Potential improvements:
 - Template updates make more use of Groovy.
 - Script update recommended by Peter Ledbrook for GRAILS-6239.
-- Move source to GitHub.
 - Add messageSource to controller template for validate method.
 - Validate method add more ?. null handlers.
 
 Release notes for 1.0.7 (TBA)
 - Footer output update.
 - Remove redundant i18n files.
+- Descriptor file clean-up.
+- Moved source to GitHub.
+- Grails 1.3.4 upgrade.
 
 Release notes for 1.0.6 (31 May 2010).
 - Grails 1.3.1 upgrade.
